--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@
 *.exe
 *.out
 *.app
+
+# Custom
+/build/
+bin/
+obj/
+Debug/
+Release/
+*.opensdf
+*.tlog
+*.log
+
+# yoshix
+/yoshix_vs_2019
+
+.vs
